--- a/Notebook/path/ed-donner_agents/1_foundations/4_lab4_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/1_foundations/4_lab4_ja.ipynb
@@ -6,7 +6,26 @@
    "source": [
     "## 最初の大きなプロジェクト - プロフェッショナルなあなた！\n",
     "\n",
-    "### そして、使用ツール。\n",
+    "### 概要 ... そして、ツールの使用\n",
+    "\n",
+    "AIエージェントを使ったキャリアアバター（自己紹介AIエージェント）の構築・運用・デプロイ方法を解説\n",
+    "\n",
+    "- Pushoverの導入\n",
+    "  - Pushoverというサービスを使って、スマホにプッシュ通知を送る仕組みを構築\n",
+    "  - `.env`ファイルでPushoverのユーザーキーとトークンを設定\n",
+    "\n",
+    "- 必要なライブラリのインポート  \n",
+    "- Pushover用の初期化と動作確認  \n",
+    "- ユーザー情報・未知の質問の記録用関数のツール化\n",
+    "- **Function Callingでツール呼出処理（if分岐／globals動的呼び出し）**\n",
+    "- LinkedInのPDFとサマリーtxtファイルからプロフィール情報の取得\n",
+    "- AIが「Ed Donnerとして」質問に回答するためのシステムプロンプトの作成\n",
+    "- システムプロンプトにプロフィール情報を含めWeb上のやりとりを本人として再現\n",
+    "- Gradioを使用してWebベースの対話型チャットの実装\n",
+    "- HuggingFace Spacesへのデプロイ方法の説明\n",
+    "- 応用・商用展開・エクササイズ\n",
+    "  - RAG（検索拡張生成）やツール追加例\n",
+    "  - 商用応用（専門領域のAIアシスタント）\n",
     "\n",
     "### しかし、最初に：Pushoverの紹介\n",
     "\n",
