--- a/Notebook/path/ed-donner_agents/2_openai/2_lab2_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/2_openai/2_lab2_ja.ipynb
@@ -10,6 +10,7 @@
     "\n",
     "途方もなく簡単な何かのために自分自身を準備してください。\n",
     "\n",
+    "### 概要\n",
     "（SDR（セールス・ディベロップメント・レプレゼンタティブ）エージェントの構築に向けた、）  \n",
     "コールド・セールス・アウト・リーチ・メールを生成するためのシンプルなエージェントシステムを構築。  \n",
     "（コールド・セールス・メールとは、見込み顧客にファースト・コンタクトする営業メール）\n",
@@ -525,9 +526,12 @@
     "\n",
     "ここでツールを追加します。\n",
     "\n",
-    "JSON の定型コードと、if ロジックを含む `handle_tool_calls()` 関数を思い出してください。\n",
+    "JSON定義と、if ロジックを含む `handle_tool_calls()` 関数を思い出してください。\n",
     "\n",
-    "そのすべてのボイラープレートJSONを覚えていますか？機能をデコレータ「@function_tool」で包むだけです。"
+    "- JSON定義は、関数を「@function_tool」でデコレーションするだけ済みます。\n",
+    "- 関数はエージェント機能に含まれるので独自に開発をする必要はありません。\n",
+    "\n",
+    "※ pythonのデコレーションは、Javaのアノテーションに見た目が似ているが、違う内容。"
    ]
   },
   {
@@ -811,17 +815,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'id': '5de23cb6-7d30-4235-a12c-912caf7ebe89'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# テキストメールからHTMLに改修されている。\n",
     "@function_tool\n",
@@ -844,10 +840,7 @@
     "        \"html\": html_body\n",
     "    })\n",
     "\n",
-    "    return {\"status\": \"success\"}\n",
-    "\n",
-    "# メール送信のテスト\n",
-    "send_test_email()"
+    "    return {\"status\": \"success\"}"
    ]
   },
   {
@@ -920,11 +913,11 @@
     }
    ],
    "source": [
-    "# （エージェントを）ツールにまとめる。\n",
+    "# （コールド・セールス・メール作成エージェントを）ツールにまとめる。\n",
     "tools = [tool1, tool2, tool3]\n",
     "print(tools)\n",
     "\n",
-    "# （メール関係のハンドリングは）ハンドオフする。\n",
+    "# （メール関係のハンドリングのエージェントに）ハンドオフする。\n",
     "handoffs = [emailer_agent]\n",
     "print(handoffs)"
    ]
@@ -935,8 +928,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# メール送信の所がツール使用からハンドオフに変更されている。\n",
+    "\n",
     "# 学生Guillermo Fのおかげで指示の改善\n",
-    "# メール送信の所がツール使用からハンドオフニ変更されている。\n",
     "\n",
     "# あなたはComplAIの営業マネージャーです。あなたの目標は、sales_agentツールを使って、最適なコールド・セールス・メールを1通見つけることです。\n",
     "# \n",
