--- a/Notebook/path/ed-donner_agents/2_openai/5_lab5_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/2_openai/5_lab5_ja.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 第2週 5日目\n",
     "\n",
-    "- 5日目 はあるのに、*ipynb がなかったので作成。\n",
+    "- 5日目 はあるのに、5日目の `*ipynb` がなかったので作成。\n",
     "- ただし、内容は deep_research フォルダのモジュールを実行するだけ。\n",
     "- deep_research フォルダのモジュールは `4_lab4.ipynb` の実装を詰め込んだもの。\n",
     "- ただし、若干の実装の強化がされているらしい（型チェック、例外処理、UI追加など）。\n",
