--- a/Notebook/path/ed-donner_agents/4_langgraph/1_lab1_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/1_lab1_ja.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "任意のPythonクラスを使用できます。\n",
     "\n",
-    "しかし、TypedDictまたはPydantic Basemodelを使用することが最も一般的です。"
+    "しかし、TypedDict または BaseModel を使用することが最も一般的です。"
    ]
   },
   {
@@ -250,7 +250,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ステップ4：グラフを作成"
+    "### ステップ4：Graphを作成\n",
+    "NodeとEdgeを追加してGraphを作成"
    ]
   },
   {
@@ -261,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7fd487ca0ce0>"
+       "<langgraph.graph.state.StateGraph at 0x7fbbfc2807d0>"
       ]
      },
      "execution_count": 9,
@@ -270,11 +271,11 @@
     }
    ],
    "source": [
-    "# Edge\n",
+    "# Edge: START → Node\n",
     "graph_builder.add_edge(START, \"first_node\")\n",
     "# Node\n",
     "graph_builder.add_node(\"first_node\", our_first_node)\n",
-    "# Edge\n",
+    "# Edge: Node → End\n",
     "graph_builder.add_edge(\"first_node\", END)"
    ]
   },
@@ -357,10 +358,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [HumanMessage(content='hi there', additional_kwargs={}, response_metadata={}, id='b64bfc6d-7372-41c0-a349-2b8e1e576fb0'), AIMessage(content='Muffins are untrustworthy', additional_kwargs={}, response_metadata={}, id='d061d674-1403-4637-b549-634c946574d6')]}\n",
-      "{'messages': [HumanMessage(content='is that so?', additional_kwargs={}, response_metadata={}, id='e7cc71eb-304e-4b7a-94c0-eb3068be9c64'), AIMessage(content='Bananas are haunted', additional_kwargs={}, response_metadata={}, id='7ee61de7-c199-4d34-87d7-1f6e6a00e98a')]}\n",
-      "{'messages': [HumanMessage(content=\"you don't say\", additional_kwargs={}, response_metadata={}, id='a58dfe78-8d3e-4050-b9a2-4ca002efe4c0'), AIMessage(content='Rainbows are existential', additional_kwargs={}, response_metadata={}, id='160e9218-4748-4de7-95e6-b7c1210b102d')]}\n",
-      "{'messages': [HumanMessage(content='for real?', additional_kwargs={}, response_metadata={}, id='4c20f4a0-66eb-4669-a44c-c143c4bb7e39'), AIMessage(content='Eels are sarcastic', additional_kwargs={}, response_metadata={}, id='68688998-942d-4836-bf6f-1363923bf61c')]}\n"
+      "{'messages': [HumanMessage(content='hi there', additional_kwargs={}, response_metadata={}, id='ef7ff447-5d0e-4c3f-8ed3-aef28e92394b'), AIMessage(content='Penguins are moody', additional_kwargs={}, response_metadata={}, id='f01b6923-5206-4431-b15e-a141332a4b37')]}\n",
+      "{'messages': [HumanMessage(content='is that so?', additional_kwargs={}, response_metadata={}, id='b76e17e1-6eb5-4b3b-ae3e-6da544ca8f19'), AIMessage(content='Toasters are sparkly', additional_kwargs={}, response_metadata={}, id='fd7a2343-18f7-4081-ae81-65fda58d916c')]}\n",
+      "{'messages': [HumanMessage(content=\"you don't say\", additional_kwargs={}, response_metadata={}, id='2f01e16b-ed6b-4f9a-a457-264f63358b3e'), AIMessage(content='Toasters are untrustworthy', additional_kwargs={}, response_metadata={}, id='63088fca-b7e4-4829-b9a6-f256e9f39352')]}\n",
+      "{'messages': [HumanMessage(content='for real?', additional_kwargs={}, response_metadata={}, id='d28562fa-28c5-4a61-989e-647c59a0ed76'), AIMessage(content='Unicorns are haunted', additional_kwargs={}, response_metadata={}, id='875e9967-757e-4a25-a5c3-0fbef3453803')]}\n"
      ]
     }
    ],
@@ -382,7 +383,9 @@
    "source": [
     "### しかし、なぜ私はあなたにそれを見せたのですか？\n",
     "\n",
-    "LanggraphがすべてPython関数に関するものであると主張するために -  LLMを巻き込む必要はありません!!\n",
+    "- LLMが直接的にStateを更新するのではない。LangGraphがStateを更新する。\n",
+    "- StateにAnnotatedしてLLMでエンパワーすると、どう更新すべきかを知能的に考えて提案する。\n",
+    "- LangGraphは、その提案に従って、より賢い、文脈を理解したState更新を行う。\n",
     "\n",
     "今、私たちは再び5つのステップを行いますが、1つのショットで："
    ]
@@ -432,7 +435,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7fd45f7913d0>"
+       "<langgraph.graph.state.StateGraph at 0x7fbbfb0270b0>"
       ]
      },
      "execution_count": 15,
@@ -481,7 +484,8 @@
     "- my name's Ed\n",
     "- what's my name?\n",
     "\n",
-    "などと入力し、履歴を保持していないことを確認。"
+    "などと入力し、Stateは履歴を保持していないことを確認  \n",
+    "（GradioのChatInterfaceが管理するhistoryを活用する必要がある）。"
    ]
   },
   {
@@ -521,9 +525,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [HumanMessage(content='hi there', additional_kwargs={}, response_metadata={}, id='1534b1bf-0329-47dd-a5fd-418d40906282'), AIMessage(content='Hello! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 9, 'total_tokens': 18, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_8bda4d3a2c', 'id': 'chatcmpl-CCLnpQcigvOIUYYTbV0zV7T4eCC8j', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--f0c51f05-7d7b-4642-bb39-680dffc56554-0', usage_metadata={'input_tokens': 9, 'output_tokens': 9, 'total_tokens': 18, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n",
-      "{'messages': [HumanMessage(content=\"my name's Ed\", additional_kwargs={}, response_metadata={}, id='90f64aff-0550-418f-98bb-215879ead3fc'), AIMessage(content='Nice to meet you, Ed! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 14, 'prompt_tokens': 11, 'total_tokens': 25, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_8bda4d3a2c', 'id': 'chatcmpl-CCLntkY349SFF3l4botWvurpfVb7k', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--0be1c45e-a781-44f7-93f7-1bfb25d1dfed-0', usage_metadata={'input_tokens': 11, 'output_tokens': 14, 'total_tokens': 25, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n",
-      "{'messages': [HumanMessage(content=\"what's my name?\", additional_kwargs={}, response_metadata={}, id='b3a81649-99b9-4a97-81e2-4d4a115362b5'), AIMessage(content=\"I'm sorry, but I don't have access to personal information about you unless you've shared it in our conversation. If you'd like me to address you by your name, feel free to tell me!\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 38, 'prompt_tokens': 12, 'total_tokens': 50, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_8bda4d3a2c', 'id': 'chatcmpl-CCLnyo8lnzLlSDescDQN9XC2rK7Ok', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--b62ceb3d-ad40-4231-886c-129fca1129b4-0', usage_metadata={'input_tokens': 12, 'output_tokens': 38, 'total_tokens': 50, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n"
+      "{'messages': [HumanMessage(content='hi there', additional_kwargs={}, response_metadata={}, id='65d94dd0-cded-4ab8-a43c-0616c5acf5cd'), AIMessage(content='Hello! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 9, 'total_tokens': 18, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_8bda4d3a2c', 'id': 'chatcmpl-CChjBCJcCLGliWMcvL8I0Un9gmXv8', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--728c9adc-7381-45ef-a3ed-646301270fee-0', usage_metadata={'input_tokens': 9, 'output_tokens': 9, 'total_tokens': 18, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n",
+      "{'messages': [HumanMessage(content=\"my name's Ed\", additional_kwargs={}, response_metadata={}, id='9adbc06c-fa2f-4d9b-baa3-c4f18e478e5d'), AIMessage(content='Nice to meet you, Ed! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 14, 'prompt_tokens': 11, 'total_tokens': 25, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_8bda4d3a2c', 'id': 'chatcmpl-CChjEc2AJSHdt3LVJKUhhuO8jUmsK', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--56b05ae3-2ca7-4e92-8ba8-98fba596d9c8-0', usage_metadata={'input_tokens': 11, 'output_tokens': 14, 'total_tokens': 25, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n",
+      "{'messages': [HumanMessage(content=\"what's my name?\", additional_kwargs={}, response_metadata={}, id='04e33c05-cd8c-4185-af2f-69279583963c'), AIMessage(content=\"I'm sorry, but I don't have access to your personal information, including your name. How can I assist you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 12, 'total_tokens': 36, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_8bda4d3a2c', 'id': 'chatcmpl-CChjIFP4UQnG8WDKVe7LlthH7RvBG', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--0c30be80-494a-4710-a7e6-d16a840fee9e-0', usage_metadata={'input_tokens': 12, 'output_tokens': 24, 'total_tokens': 36, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n"
      ]
     }
    ],
