--- a/Notebook/path/ed-donner_agents/4_langgraph/1_lab1_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/1_lab1_ja.ipynb
@@ -76,10 +76,12 @@
     "from pydantic import BaseModel\n",
     "from typing import Annotated\n",
     "\n",
+    "# langchain\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
     "# langgraph\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.graph.message import add_messages\n",
-    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "# 表示\n",
     "from IPython.display import Image, display\n",
