--- a/Notebook/path/ed-donner_agents/4_langgraph/2_lab2_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/2_lab2_ja.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 第4週、3日目 - その他のLangGraphへようこそ。\n",
+    "### 第4週、3日目 - さらに LangGraph について。\n",
     "\n",
     "#### 概要\n",
     "LangGraphで「ツールを使うエージェントグラフ」と「永続化された会話メモリ」を組み合わせた高度なチャットAIシステムの実装例  \n",
