--- a/Notebook/path/ed-donner_agents/4_langgraph/1_lab1_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/1_lab1_ja.ipynb
@@ -4,18 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pythonノートブックにようこそ！\n",
+    "## 第4週、2日目へようこそ -  LangGraphの紹介！\n",
+    "\n",
+    "### Pythonノートブックにようこそ！\n",
     "\n",
     "私のことが恋しかったですか？？\n",
     "\n",
-    "### 第4週、2日目へようこそ -  LangGraphの紹介！"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 概要\n",
+    "### 概要\n",
     "LangGraphというPythonライブラリを使ったグラフ構造のワークフロー構築について、LangGraphの基礎を紹介\n",
     "\n",
     "- 1. インポート & 準備\n",
