--- a/Notebook/path/ed-donner_agents/4_langgraph/2_lab2_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/2_lab2_ja.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 第4週、3日目 - さらに LangGraph について。\n",
+    "## 第4週、3日目へようこそ - さらに LangGraph について。\n",
     "\n",
-    "#### 概要\n",
+    "### 概要\n",
     "LangGraphで「ツールを使うエージェントグラフ」と「永続化された会話メモリ」を組み合わせた高度なチャットAIシステムの実装例  \n",
     "特にLangGraph独自の「スーパーステップ」「チェックポイント」「状態管理」について重点的に解説し、実際に実装\n",
     "\n",
