--- a/Notebook/path/ed-donner_agents/4_langgraph/3_lab3_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/3_lab3_ja.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 第4週、4日目へようこそ - LangGraphを非同期で呼び出す\n",
+    "## 第4週、4日目へようこそ - LangGraphを非同期で呼び出す\n",
     "\n",
     "これが素晴らしいプロジェクトの始まりです！本当にシンプルで非常に効果的です。\n",
     "\n",
-    "#### 概要\n",
+    "### 概要\n",
     "LangGraphを非同期で呼び出す（非同期ツールを実行）\n",
     "\n",
     "- 1. 準備  \n",
-    "インポート、環境変数の読み込み\n",
+    "インポート、環境変数の読込\n",
     "\n",
     "- 2. ツール\n",
     "Push通知ツール、Playwrightブラウザツール\n",
@@ -499,7 +499,7 @@
     "### それでおしまい！そして、これをしましょう：\n",
     "\n",
     "「なにかの情報」をプッシュ通知で送ってとプロンプト入力すると良い。  \n",
-    "例えば以下のような（日本語で送るとプッシュ通知はされるが、PlayWrightが動作しなかった）。  \n",
+    "例えば以下のような（日本語で送るとプッシュ通知はされるが、PlayWrightが動作しない事があった...）。  \n",
     "`please send me a push notification with the current USD/GBP exchange rate`"
    ]
   },
@@ -548,11 +548,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 最後に、ログなど確認\n",
+    "\n",
+    "https://smith.langchain.com"
+   ]
   }
  ],
  "metadata": {
