--- a/Notebook/path/ed-donner_agents/4_langgraph/4_lab4_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/4_lab4_ja.ipynb
@@ -551,7 +551,7 @@
     "with gr.Blocks(theme=gr.themes.Default(primary_hue=\"emerald\")) as demo:\n",
     "    gr.Markdown(\"## Sidekick Personal Co-worker\")\n",
     "    \n",
-    "    # スレッド初期化（UI立ち上げ毎に初期化）\n",
+    "    # スレッド初期化（UI立上毎）\n",
     "    thread = gr.State(make_thread_id())\n",
     "\n",
     "    # 各種UI要素\n",
@@ -572,6 +572,7 @@
     "    # イベント・ハンドラ、process_message関数の引数・戻り値としては、\n",
     "    # [message, success_criteria, chatbot(=history), thread]が渡され、\n",
     "    # [chatbot](=history + [user, reply, feedback])が返る。\n",
+    "    # ※ submitの所のイベント・ハンドラは入力欄でエンター押下時にトリガ（go_button.clickと同じ事をヤる）\n",
     "    message.submit(process_message, [message, success_criteria, chatbot, thread], [chatbot])\n",
     "    success_criteria.submit(process_message, [message, success_criteria, chatbot, thread], [chatbot])\n",
     "    reset_button.click(reset, [], [message, success_criteria, chatbot, thread])\n",
