--- a/Notebook/path/ed-donner_agents/5_autogen/1_lab1_autogen_agentchat_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/5_autogen/1_lab1_autogen_agentchat_ja.ipynb
@@ -1,247 +1,334 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 5週目の1日目へようこそ\n",
-        "\n",
-        "Autogen AgentChat！\n",
-        "\n",
-        "クルーとオープンエージェントSDKと多くの共通点があるため、これはシンプルで馴染みがあるはずです"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from dotenv import load_dotenv\n",
-        "load_dotenv(override=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 最初の概念：モデル"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
-        "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from autogen_ext.models.ollama import OllamaChatCompletionClient\n",
-        "ollamamodel_client = OllamaChatCompletionClient(model=\"llama3.2\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 2番目の概念：メッセージ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from autogen_agentchat.messages import TextMessage\n",
-        "message = TextMessage(content=\"I'd like to go to London\", source=\"user\")\n",
-        "message"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 3番目の概念：エージェント"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from autogen_agentchat.agents import AssistantAgent\n",
-        "\n",
-        "agent = AssistantAgent(\n",
-        "    name=\"airline_agent\",\n",
-        "    model_client=model_client,\n",
-        "    system_message=\"You are a helpful assistant for an airline. You give short, humorous answers.\",\n",
-        "    model_client_stream=True\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### on_messagesですべてをまとめます"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from autogen_core import CancellationToken\n",
-        "\n",
-        "response = await agent.on_messages([message], cancellation_token=CancellationToken())\n",
-        "response.chat_message.content"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### チケット価格のローカルデータベースを作成しましょう"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "import sqlite3\n",
-        "\n",
-        "# 既存のデータベースファイルが存在する場合は削除します\n",
-        "if os.path.exists(\"tickets.db\"):\n",
-        "    os.remove(\"tickets.db\")\n",
-        "\n",
-        "# データベースとテーブルを作成します\n",
-        "conn = sqlite3.connect(\"tickets.db\")\n",
-        "c = conn.cursor()\n",
-        "c.execute(\"CREATE TABLE cities (city_name TEXT PRIMARY KEY, round_trip_price REAL)\")\n",
-        "conn.commit()\n",
-        "conn.close()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# データベースを入力します\n",
-        "def save_city_price(city_name, round_trip_price):\n",
-        "    conn = sqlite3.connect(\"tickets.db\")\n",
-        "    c = conn.cursor()\n",
-        "    c.execute(\"REPLACE INTO cities (city_name, round_trip_price) VALUES (?, ?)\", (city_name.lower(), round_trip_price))\n",
-        "    conn.commit()\n",
-        "    conn.close()\n",
-        "\n",
-        "# いくつかの都市！\n",
-        "save_city_price(\"London\", 299)\n",
-        "save_city_price(\"Paris\", 399)\n",
-        "save_city_price(\"Rome\", 499)\n",
-        "save_city_price(\"Madrid\", 550)\n",
-        "save_city_price(\"Barcelona\", 580)\n",
-        "save_city_price(\"Berlin\", 525)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# 都市の価格を取得する方法\n",
-        "def get_city_price(city_name: str) -> float | None:\n",
-        "    \"\"\" Get the roundtrip ticket price to travel to the city \"\"\"\n",
-        "    conn = sqlite3.connect(\"tickets.db\")\n",
-        "    c = conn.cursor()\n",
-        "    c.execute(\"SELECT round_trip_price FROM cities WHERE city_name = ?\", (city_name.lower(),))\n",
-        "    result = c.fetchone()\n",
-        "    conn.close()\n",
-        "    return result[0] if result else None"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "get_city_price(\"Rome\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from autogen_agentchat.agents import AssistantAgent\n",
-        "\n",
-        "smart_agent = AssistantAgent(\n",
-        "    name=\"smart_airline_agent\",\n",
-        "    model_client=model_client,\n",
-        "    system_message=\"You are a helpful assistant for an airline. You give short, humorous answers, including the price of a roundtrip ticket.\",\n",
-        "    model_client_stream=True,\n",
-        "    tools=[get_city_price],\n",
-        "    reflect_on_tool_use=True\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "response = await smart_agent.on_messages([message], cancellation_token=CancellationToken())\n",
-        "for inner_message in response.inner_messages:\n",
-        "    print(inner_message.content)\n",
-        "response.chat_message.content"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": ".venv",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.12.9"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 第5週の1日目へようこそ\n",
+    "\n",
+    "Autogen AgentChat！\n",
+    "\n",
+    "CrewとOpenAI Agent SDKと多くの共通点があるため、これはシンプルで馴染みがあるはずです"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 2
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 最初の概念：モデル"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LLMの初期化 OpenAI\n",
+    "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
+    "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LLMの初期化 Ollama\n",
+    "from autogen_ext.models.ollama import OllamaChatCompletionClient\n",
+    "ollamamodel_client = OllamaChatCompletionClient(model=\"llama3.2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2番目の概念：メッセージ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TextMessage(source='user', models_usage=None, metadata={}, created_at=datetime.datetime(2025, 9, 9, 4, 31, 7, 174501, tzinfo=datetime.timezone.utc), content=\"I'd like to go to London\", type='TextMessage')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from autogen_agentchat.messages import TextMessage\n",
+    "message = TextMessage(content=\"I'd like to go to London\", source=\"user\")\n",
+    "message"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3番目の概念：エージェント"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autogen_agentchat.agents import AssistantAgent\n",
+    "\n",
+    "agent = AssistantAgent(\n",
+    "    name=\"airline_agent\",\n",
+    "    model_client=model_client,\n",
+    "    system_message=\"You are a helpful assistant for an airline. You give short, humorous answers.\",\n",
+    "    model_client_stream=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### on_messagesですべて？をまとめます\n",
+    "- LLMを設定したagentにメッセージを入力し、応答を出力する。\n",
+    "- CancellationTokenは、非同期処理や長時間実行されるタスクで用いられる概念"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Great choice! London is where the tea is always hot and the rain is always... well, also pretty much always hot!'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from autogen_core import CancellationToken\n",
+    "\n",
+    "response = await agent.on_messages([message], cancellation_token=CancellationToken())\n",
+    "response.chat_message.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### チケット価格のローカルDB（SQLite）を作成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sqlite3\n",
+    "\n",
+    "# 既存のSQLite・DBファイルが存在する場合は削除\n",
+    "if os.path.exists(\"tickets.db\"):\n",
+    "    os.remove(\"tickets.db\")\n",
+    "\n",
+    "# データベースとテーブルを作成\n",
+    "conn = sqlite3.connect(\"tickets.db\")\n",
+    "c = conn.cursor()\n",
+    "c.execute(\"CREATE TABLE cities (city_name TEXT PRIMARY KEY, round_trip_price REAL)\")\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DBに都市の旅費を登録するメソッド"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_city_price(city_name, round_trip_price):\n",
+    "    conn = sqlite3.connect(\"tickets.db\")\n",
+    "    c = conn.cursor()\n",
+    "    c.execute(\"REPLACE INTO cities (city_name, round_trip_price) VALUES (?, ?)\", (city_name.lower(), round_trip_price))\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "# 都市の旅費を登録\n",
+    "save_city_price(\"London\", 299)\n",
+    "save_city_price(\"Paris\", 399)\n",
+    "save_city_price(\"Rome\", 499)\n",
+    "save_city_price(\"Madrid\", 550)\n",
+    "save_city_price(\"Barcelona\", 580)\n",
+    "save_city_price(\"Berlin\", 525)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DBの都市の旅費を参照するメソッド"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "499.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_city_price(city_name: str) -> float | None:\n",
+    "    \"\"\" Get the roundtrip ticket price to travel to the city \"\"\"\n",
+    "    conn = sqlite3.connect(\"tickets.db\")\n",
+    "    c = conn.cursor()\n",
+    "    c.execute(\"SELECT round_trip_price FROM cities WHERE city_name = ?\", (city_name.lower(),))\n",
+    "    result = c.fetchone()\n",
+    "    conn.close()\n",
+    "    return result[0] if result else None\n",
+    "\n",
+    "# Romeへの旅費を取得\n",
+    "get_city_price(\"Rome\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 賢いエージェント"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ...はツールを使う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autogen_agentchat.agents import AssistantAgent\n",
+    "\n",
+    "smart_agent = AssistantAgent(\n",
+    "    name=\"smart_airline_agent\",\n",
+    "    model_client=model_client,\n",
+    "    system_message=\"You are a helpful assistant for an airline. You give short, humorous answers, including the price of a roundtrip ticket.\",\n",
+    "    model_client_stream=True,\n",
+    "    tools=[get_city_price], # ★\n",
+    "    reflect_on_tool_use=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ...を実際に実行してみる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[FunctionCall(id='call_owubkEAwNZW2Tveaw66ydyL0', arguments='{\"city_name\":\"London\"}', name='get_city_price')]\n",
+      "[FunctionExecutionResult(content='299.0', name='get_city_price', call_id='call_owubkEAwNZW2Tveaw66ydyL0', is_error=False)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'A roundtrip ticket to London is just $299! That’s only slightly more than what it costs to bribe a pigeon to deliver your lunch! 🕊️🍔'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = await smart_agent.on_messages([message], cancellation_token=CancellationToken())\n",
+    "for inner_message in response.inner_messages:\n",
+    "    print(inner_message.content)\n",
+    "response.chat_message.content"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
