--- a/Notebook/path/ed-donner_agents/5_autogen/2_lab2_autogen_agentchat_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/5_autogen/2_lab2_autogen_agentchat_ja.ipynb
@@ -432,8 +432,7 @@
     "# LLM（gpt-4o-mini）\n",
     "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")\n",
     "\n",
-    "# プロンプト\n",
-    "# 2025 年 6 月の JFK から LHR への片道直行便を検索します。\n",
+    "# プロンプト \n",
     "prompt = \"\"\"Find a one-way non-stop flight from JFK to LHR in June 2025.\"\"\"\n",
     "\n",
     "# 主エージェント\n",
@@ -589,21 +588,56 @@
     }
    ],
    "source": [
+    "# Autogen AgentChat と MCP（Model Context Protocol）の「Fetch」サーバーを使って、\n",
+    "# エージェントに任意のURLの内容を取得させ、OpenAIのモデルで要約させる非同期コード\n",
+    "\n",
     "from autogen_agentchat.agents import AssistantAgent\n",
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
     "from autogen_ext.tools.mcp import StdioServerParams, mcp_server_tools\n",
     "\n",
-    "# MCP-Server-Fetchからフェッチツールを入手します。\n",
+    "# mcp-server-fetch\n",
+    "# STDIO方式のMCPツールをuvxでinstall\n",
+    "# コレは、curl/requests の MCPツール版。\n",
     "fetch_mcp_server = StdioServerParams(command=\"uvx\", args=[\"mcp-server-fetch\"], read_timeout_seconds=30)\n",
+    "\n",
+    "# Agentツール化するラッパ\n",
     "fetcher = await mcp_server_tools(fetch_mcp_server)\n",
     "\n",
-    "# フェッチツールを使用できるエージェントを作成します。\n",
+    "# フェッチツールを使用できるエージェントを作成\n",
     "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")\n",
-    "agent = AssistantAgent(name=\"fetcher\", model_client=model_client, tools=fetcher, reflect_on_tool_use=True)  # タイプ：無視します\n",
+    "agent = AssistantAgent(name=\"fetcher\", model_client=model_client, tools=fetcher, reflect_on_tool_use=True)  # type: ignore\n",
     "\n",
-    "# エージェントにURLのコンテンツを取得し、要約します。\n",
+    "# エージェントにURLのコンテンツを取得し、要約\n",
+    "# edwarddonner.com をレビューし、学んだことを要約してください。Markdownで返信してください。\n",
     "result = await agent.run(task=\"Review edwarddonner.com and summarize what you learn. Reply in Markdown.\")\n",
-    "display(Markdown(result.messages[-1].content))"
+    "display(Markdown(result.messages[-1].content))\n",
+    "\n",
+    "# ココまでで、agent.on_messages、team.run、agent.runを使ってきた、\n",
+    "# agent.on_messages（複雑性はコチラの方が上）でもMCPは実行できるが、\n",
+    "# 簡単なプロンプトやタスク（文字列一つ）で十分なときにagent.runは便利。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### requests、もしくは、mcp-server-fetchをAgentツールとして使用するコードとの非機能要件的な差異\n",
+    "- シンプルさ、低レイテンシ、依存最小を優先する小規模・短期の用途なら、requests を直接ツール化する方法が手軽。\n",
+    "- セキュリティ分離、標準化、運用・監査・ガバナンス、再利用性を重視するなら MCP 経由の fetch が適している。\n",
+    "  - プロセス分離\n",
+    "    - 最小権限・責務分離、ポリシー一元適用がし易い。\n",
+    "    - シークレットをMCP 側に閉じ込めることでLLMからの漏洩を防止できる。\n",
+    "  - 標準化・相互運用性\n",
+    "    - ツールの発見、スキーマ、エラー、リソース等のやり取りがプロトコルで標準化されている。\n",
+    "    - モデルやランタイムが変わっても同じ MCP ツールを再利用し易い（多言語・多環境での再利用）。\n",
+    "  - 運用・ガバナンス\n",
+    "    - ツールは独立したサーバとしてデプロイ・バージョン管理でき、\n",
+    "    - ローテーションやロールバック、レート制限、監査ログの集約が容易。\n",
+    "    - 組織のネットワーク制御や DLP と統合しやすい（同様にサーバ側で統制）。\n",
+    "  - 可観測性・監査  \n",
+    "    ツール呼び出しのログやメトリクスが明確な境界で記録・計測される。\n",
+    "  - 拡張性・機能発見\n",
+    "    ツールが自己記述的に機能や引数スキーマを公開するため、エージェントが動的に能力を発見し易い。"
    ]
   }
  ],
