--- a/Notebook/path/ed-donner_agents/5_autogen/1_lab1_autogen_agentchat_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/5_autogen/1_lab1_autogen_agentchat_ja.ipynb
@@ -4,11 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 第5週の1日目へようこそ\n",
+    "## 第5週の1日目へようこそ\n",
     "\n",
     "Autogen AgentChat！\n",
     "\n",
-    "CrewとOpenAI Agent SDKと多くの共通点があるため、これはシンプルで馴染みがあるはずです"
+    "CrewとOpenAI Agent SDKと多くの共通点があるため、これはシンプルで馴染みがあるはずです\n",
+    "\n",
+    "### 概要\n",
+    "AutoGenのAgentChat機能を使ったエージェント開発の基本的な流れを学ぶ\n",
+    "\n",
+    "- イントロダクション  \n",
+    "  - AutoGen AgentChatの紹介。\n",
+    "  - CrewやOpenAI Agents SDKに似た構成であることを説明。\n",
+    "\n",
+    "- 環境設定  \n",
+    "`dotenv`を使って環境変数をロード。\n",
+    "\n",
+    "- モデルの利用  \n",
+    "OpenAIやOllamaなどのチャットLLMクライアントを作成。\n",
+    "\n",
+    "- メッセージの定義  \n",
+    "ユーザーからのメッセージを作成。\n",
+    "\n",
+    "- エージェントの定義  \n",
+    "エージェントを定義し、システム・プロンプトを設定。\n",
+    "\n",
+    "- エージェントへのメッセージ送信  \n",
+    "`on_messages`メソッドでエージェントからのメッセージ送受信\n",
+    "\n",
+    "- ローカルDBの作成  \n",
+    "SQLiteを使い、航空券の価格情報（都市名と往復料金）のDBを作成・初期化。\n",
+    "\n",
+    "- DB操作関数の実装とツール化  \n",
+    "都市名と価格を保存する関数、都市名から価格を取得する関数を実装。\n",
+    "\n",
+    "- ツール利用可能なエージェントの作成\n",
+    "  - DBアクセス関数をツールとして持つエージェントを作成。\n",
+    "  - ユーザーからの都市指定に応じて価格を返すことができる。\n",
+    "\n",
+    "- 応答の実行例  \n",
+    "実際にメッセージを送り、ツール利用を含む応答例を表示。"
    ]
   },
   {
