--- a/Notebook/path/ed-donner_agents/5_autogen/2_lab2_autogen_agentchat_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/5_autogen/2_lab2_autogen_agentchat_ja.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 第5週の1日目へようこそ\n",
+    "## 第5週の2日目へようこそ\n",
     "Autogen AgentChat - より深く行く..\n",
     "\n",
     "1. マルチモーダル会話\n",
@@ -12,7 +12,27 @@
     "3. LangChainツールの使用\n",
     "4. エージェント・チーム構成\n",
     "\n",
-    "...そして特別な予期せぬ追加の一品"
+    "...そして特別な予期せぬ追加の一品\n",
+    "\n",
+    "### 概要\n",
+    "AutoGen AgentChatの高度な機能を実践的に学ぶ。 \n",
+    "\n",
+    "- マルチモーダル会話  \n",
+    "画像をWebから取得し、AutoGenエージェントに画像内容の説明をさせる。\n",
+    "\n",
+    "- 構造化出力  \n",
+    "画像説明をPydanticモデル（`ImageDescription`）の形式で返す。\n",
+    "\n",
+    "- LangChainツールの利用\n",
+    "  - LangChainのGoogle検索APIやファイル管理ツールをAutoGenエージェントから利用する方法を解説\n",
+    "  - 「JFK→LHRの直行便を探し、結果をファイル出力して、ベストなものを要約して返す」というタスク例\n",
+    "\n",
+    "- チームによる対話  \n",
+    "複数のエージェントがRoundRobinで会話し、一定条件で終了するチームによる対話の例。\n",
+    "\n",
+    "- MCP（Model Context Protocol） の紹介\n",
+    "  - AnthropicによるMCPサーバーツールの利用例と、Windowsユーザー向けの注意・WSLセットアップ案内\n",
+    "  - MCPツールをAutoGenエージェントに組み込み、Webページの要約タスクを実行"
    ]
   },
   {
@@ -455,6 +475,7 @@
     "# AutoGenで「会話の終了条件」を表すクラス\n",
     "text_termination = TextMentionTermination(\"APPROVE\")\n",
     "\n",
+    "# RoundRobinGroupChatは、複数のエージェントが 順番にメッセージを回し合う仕組み。\n",
     "# MAX_TURNSを追加してくれたPeter Aに感謝します - それ以外の場合、これはループに入ることができます。\n",
     "team = RoundRobinGroupChat([primary_agent, evaluation_agent], termination_condition=text_termination, max_turns=20)"
    ]
@@ -509,7 +530,9 @@
     "# エージェント・チーム構成を走らせる\n",
     "result = await team.run(task=prompt)\n",
     "for message in result.messages:\n",
-    "    print(f\"{message.source}:\\n{message.content}\\n\\n\")"
+    "    print(f\"{message.source}:\\n{message.content}\\n\\n\")\n",
+    "\n",
+    "# 以下の例では「残念ながら」ラウンド・トリップは発生していない。"
    ]
   },
   {
